--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
     "classnames": "2.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.2.0",
